--- a/styles.css
+++ b/styles.css
@@ -99,12 +99,98 @@ p {
 /* NAV */
 
 nav {
-  padding: 2rem 1rem;
+  padding: 2rem 0.5rem;
 }
 
 .navContainer {
   display: flex;
   justify-content: space-between;
+  position: relative;
+}
+
+.hamburgerDropdown {
+  position: absolute;
+  top: 4.75rem;
+  right: 0;
+  display: none;
+  width: 100%;
+  padding: 1.5rem 0;
+  background-color: var(--color-white);
+  color: var(--color-dark-grayish-blue);
+  font-family: var(--font-family-barlow);
+  font-size: 1.25rem;
+  font-weight: 600;
+  text-align: center;
+}
+
+.hamburgerDropdown::before {
+  content: "";
+  position: absolute;
+  top: -1.5rem;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-left: 3rem solid transparent;
+  border-bottom: 3rem solid var(--color-white);
+}
+
+.hamburgerDropdown li {
+  padding: 1rem 0;
+}
+
+.hamburgerDropdown.active {
+  display: block;
+}
+
+.contactButton {
+  margin: 1rem 0;
+  color: var(--color-dark-blue);
+  font-size: 1rem;
+  font-family: var(--font-family-fraunces);
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.contactButton a {
+  background-color: var(--color-yellow);
+  padding: 1rem 1.75rem;
+  border-radius: 2rem;
+}
+
+.hamburgerMenu {
+  height: 1.25rem;
+  width: 2rem;
+  position: relative;
+}
+
+.hamburgerMenu span {
+  position: absolute;
+  height: 0.2rem;
+  width: 100%;
+  background-color: var(--color-white);
+  transition: all 300ms ease;
+}
+
+.hamburgerMenu span:nth-child(2) {
+  top: 50%;
+}
+
+.hamburgerMenu span:nth-child(3) {
+  top: 100%;
+}
+
+.hamburgerMenu.active span:nth-child(1) {
+  top: 50%;
+  transform: rotate(45deg);
+}
+
+.hamburgerMenu.active span:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburgerMenu.active span:nth-child(3) {
+  top: 50%;
+  transform: rotate(-45deg);
 }
 
 /* HEADER */
