--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ ul {
 
 button {
   border: none;
+  background: none;
   cursor: pointer;
 }
 
@@ -61,39 +62,33 @@ h2,
 h3,
 h4 {
   font-family: var(--font-family-fraunces);
-  font-weight: 600;
+  font-weight: 900;
   line-height: 1.25;
-  text-transform: uppercase;
-}
-
-h2,
-h3,
-h4 {
-  font-weight: 700;
 }
 
 h1 {
-  font-size: 2.25rem;
-  font-weight: 900;
   color: var(--color-white);
+  font-size: 2.5rem;
   letter-spacing: 0.5rem;
+  text-transform: uppercase;
 }
 
 h2 {
-  font-size: 1.875rem;
+  color: var(--color-very-dark-desaturated-blue);
+  font-size: 2rem;
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.75rem;
 }
 
 h4 {
-  font-size: 1.25rem;
+  font-size: 1rem;
 }
 
 p {
-  font-size: 1rem;
-  line-height: 1.5;
+  font-size: 1.1rem;
+  line-height: 1.7;
 }
 
 /* NAV */
@@ -205,7 +200,7 @@ header {
 
 h1 {
   text-align: center;
-  margin-bottom: 3.25rem;
+  margin-bottom: 3rem;
 }
 
 .headerContainer {
@@ -213,5 +208,42 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 4rem;
+  padding-top: 3.5rem;
+}
+
+/* MAIN */
+
+.learnMoreButton {
+  color: var(--color-very-dark-desaturated-blue);
+  font-family: var(--font-family-fraunces);
+  font-size: 0.95rem;
+  font-weight: 900;
+  text-transform: uppercase;
+  margin-top: 1rem;
+  position: relative;
+}
+
+.learnMoreButton::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: -0.5rem;
+  right: -0.5rem;
+  bottom: -0.05rem;
+  height: 0.6rem;
+  border-radius: 2rem;
+  background-color: var(--color-yellow);
+  opacity: 0.25;
+}
+
+.transformYourBrandTextContainer {
+  text-align: center;
+  padding: 4rem 0;
+}
+
+.transformYourBrandTextContainer p {
+  padding: 1.5rem 0;
+  color: var(--color-dark-grayish-blue);
+  font-family: var(--font-family-barlow);
+  font-weight: 600;
 }
