--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,8 @@ h1 {
   font-size: 2.25rem;
   letter-spacing: 0.5rem;
   text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 3rem;
 }
 
 h2 {
@@ -87,12 +89,18 @@ h3 {
 }
 
 h4 {
+  color: var(--color-grayish-blue);
   font-size: 1rem;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  padding-bottom: 4rem;
 }
 
 p {
   font-size: 1.1rem;
   line-height: 1.7;
+  font-family: var(--font-family-barlow);
+  font-weight: 600;
 }
 
 /* NAV */
@@ -202,11 +210,6 @@ header {
   min-height: max(100vh, 33.75rem);
 }
 
-header h1 {
-  text-align: center;
-  margin-bottom: 3rem;
-}
-
 .headerContainer {
   display: flex;
   flex-direction: column;
@@ -257,8 +260,6 @@ header h1 {
 .standOut p {
   padding: 1.5rem 0;
   color: var(--color-dark-grayish-blue);
-  font-family: var(--font-family-barlow);
-  font-weight: 600;
 }
 
 /* GRAPHIC DESIGN AND PHOTOGRAPHY */
@@ -298,6 +299,47 @@ header h1 {
   padding-top: 1.5rem;
   padding-bottom: 4rem;
   font-size: 1rem;
-  font-family: var(--font-family-barlow);
-  font-weight: 600;
+}
+
+/* TESTIMONIALS  */
+.testimonials {
+  padding: 4rem 0;
+}
+
+.testimonialsContainer {
+  text-align: center;
+  padding: 0 0.5rem;
+}
+
+.testimonial {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding-bottom: 4rem;
+}
+
+.testimonialImgContainer {
+  height: 4.5rem;
+  width: 4.5rem;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.clientReview {
+  color: var(--color-very-dark-grayish-blue);
+  padding: 2rem 0;
+}
+
+.clientName {
+  color: var(--color-very-dark-desaturated-blue);
+  font-family: var(--font-family-fraunces);
+  font-weight: 900;
+  padding-bottom: 0.5rem;
+}
+
+.clientTitle {
+  color: var(--color-grayish-blue);
+  font-size: 0.9rem;
 }
