Added alt tags to gallery images. Added footer.

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
   --color-dark-desaturated-cyan: hsl(167, 40%, 24%);
   --color-dark-blue: hsl(198, 62%, 26%);
   --color-dark-moderate-cyan: hsl(168, 34%, 41%);
+  --color-light-cyan: hsl(168, 44%, 70%);
 
   /* NEUTRAL COLORS */
   --color-very-dark-desaturated-blue: hsl(212, 27%, 19%);
@@ -350,4 +351,11 @@ header {
 .gallery {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+/* FOOTER */
+
+footer {
+  background-color: var(--color-light-cyan);
+  padding: 2rem 0;
 }
