--- a/styles.css
+++ b/styles.css
@@ -357,5 +357,29 @@ header {
 
 footer {
   background-color: var(--color-light-cyan);
-  padding: 2rem 0;
+  padding: 4rem 0;
+}
+
+.footerContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.footerNav {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.1rem;
+  font-family: var(--font-family-barlow);
+  font-weight: 600;
+  color: var(--color-dark-moderate-cyan);
+  gap: 3.5rem;
+  padding-top: 2.5rem;
+  padding-bottom: 5.5rem;
+}
+
+.footerLinks {
+  display: flex;
+  gap: 2rem;
 }
