--- a/styles.css
+++ b/styles.css
@@ -112,22 +112,6 @@ p {
   h1 {
     font-size: 3rem;
   }
-
-  h2 {
-    font-size: 2.25rem;
-  }
-
-  h3 {
-    font-size: 2rem;
-  }
-
-  h4 {
-    font-size: 1.25rem;
-  }
-
-  p {
-    font-size: 1.25rem;
-  }
 }
 
 /* NAV */
@@ -154,7 +138,7 @@ nav {
   color: var(--color-dark-grayish-blue);
   font-size: 1.25rem;
   text-align: center;
-  max-width: 25rem;
+  max-width: 20rem;
 }
 
 .hamburgerDropdown::before {
@@ -227,22 +211,6 @@ nav {
   transform: rotate(-45deg);
 }
 
-@media (min-width: 640px) {
-  .hamburgerDropdown {
-    font-size: 1.5rem;
-    padding: 2rem 0;
-  }
-
-  .hamburgerDropdown li {
-    padding: 1.25rem 0;
-  }
-
-  .contactButton {
-    font-size: 1.25rem;
-    margin: 1.25rem 0;
-  }
-}
-
 /* HEADER */
 
 header {
@@ -259,6 +227,12 @@ header {
   justify-content: center;
   align-items: center;
   padding-top: 4rem;
+}
+
+@media (min-width: 640px) {
+  header {
+    background-image: url(assets/desktop/image-header.jpg);
+  }
 }
 
 /* MAIN */
@@ -306,19 +280,10 @@ header {
 }
 
 @media (min-width: 640px) {
-  .learnMoreButton {
-    font-size: 1.1rem;
-  }
-
   .transformYourBrandTextContainer,
   .standOutTextContainer {
     text-align: center;
     padding: 6rem 0.5rem;
-  }
-
-  .transformYourBrandTextContainer p,
-  .standOut p {
-    padding: 2rem 0;
   }
 }
 
@@ -406,12 +371,6 @@ header {
   font-size: 0.9rem;
 }
 
-@media (min-width: 640px) {
-  .clientTitle {
-    font-size: 1rem;
-  }
-}
-
 /* GALLERY */
 
 .gallery {
@@ -448,10 +407,4 @@ footer {
 .footerLinks {
   display: flex;
   gap: 2rem;
-}
-
-@media (min-width: 640px) {
-  .footerNav {
-    font-size: 1.25rem;
-  }
 }
