--- a/styles.css
+++ b/styles.css
@@ -45,8 +45,9 @@ body {
 img {
   width: 100%;
   max-width: 100%;
+  height: 100%;
   display: block;
-  background-size: cover;
+  object-fit: cover;
 }
 
 a {
@@ -274,7 +275,7 @@ header {
 }
 
 .transformYourBrandTextContainer p,
-.standOut p {
+.standOutTextContainer p {
   padding: 1.5rem 0;
   color: var(--color-dark-grayish-blue);
 }
@@ -282,8 +283,35 @@ header {
 @media (min-width: 640px) {
   .transformYourBrandTextContainer,
   .standOutTextContainer {
-    text-align: center;
     padding: 6rem 0.5rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .mainContainer {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .transformYourBrandTextContainer,
+  .transformYourBrandImgContainer,
+  .standOutTextContainer,
+  .standOutImgContainer {
+    min-height: 37.5rem;
+  }
+
+  .transformYourBrandTextContainer,
+  .standOutTextContainer {
+    padding: 0 2rem;
+    display: flex;
+    text-align: left;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+  }
+
+  .transformYourBrandTextContainer {
+    order: -1;
   }
 }
 
@@ -295,7 +323,8 @@ header {
   background-repeat: no-repeat;
   min-height: 37.5rem;
   display: flex;
-  align-items: flex-end;
+  justify-content: center;
+  position: relative;
 }
 
 .graphicDesign {
@@ -308,6 +337,8 @@ header {
 
 .graphicDesignContainer,
 .photographyContainer {
+  position: absolute;
+  top: 65%;
   text-align: center;
 }
 
@@ -322,9 +353,7 @@ header {
 .graphicDesignContainer p,
 .photographyContainer p {
   padding-top: 1.5rem;
-  padding-bottom: 4rem;
   font-size: 1rem;
-  font-size: 1.1rem;
 }
 
 /* TESTIMONIALS  */
