--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,7 @@ nav {
   background-color: var(--color-yellow);
   padding: 1rem 1.75rem;
   border-radius: 2rem;
+  transition: all 300ms ease;
 }
 
 .hamburgerMenu {
@@ -210,6 +211,34 @@ nav {
 .hamburgerMenu.active span:nth-child(3) {
   top: 50%;
   transform: rotate(-45deg);
+}
+
+.navMenu ul {
+  display: none;
+  align-items: center;
+  gap: 2.5rem;
+  font-size: 1.1rem;
+  color: var(--color-white);
+}
+
+.navMenu .contactButton a {
+  background-color: var(--color-white);
+}
+
+@media (min-width: 768px) {
+  .hamburgerMenu,
+  .hamburgerDropdown {
+    display: none;
+  }
+
+  .navMenu ul {
+    display: flex;
+  }
+
+  .contactButton a:hover {
+    background-color: rgba(255, 255, 255, 0.25);
+    color: var(--color-white);
+  }
 }
 
 /* HEADER */
