--- a/styles.css
+++ b/styles.css
@@ -409,7 +409,7 @@ header {
   padding-bottom: 4rem;
 }
 
-.testimonialImgContainer {
+.testimonialImg {
   height: 4.5rem;
   width: 4.5rem;
   border-radius: 50%;
