Re-factored to group media queries by breakpoints over sections. Added responsive breakpoints up to 1280px.

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap");
 
-/* VARIABLES */
+/* ======= VARIABLES ======= */
 
 :root {
   /* PRIMARY COLORS */
@@ -24,8 +24,9 @@
   --font-family-fraunces: "Fraunces", serif;
 }
 
-/* GENERAL */
+/* ======= BASE STYLES ======= */
 
+/* GENERAL */
 * {
   margin: 0;
   padding: 0;
@@ -109,14 +110,7 @@ p {
   font-weight: 600;
 }
 
-@media (min-width: 640px) {
-  h1 {
-    font-size: 3rem;
-  }
-}
-
 /* NAV */
-
 nav {
   padding: 2rem 0.5rem;
 }
@@ -225,24 +219,7 @@ nav {
   background-color: var(--color-white);
 }
 
-@media (min-width: 768px) {
-  .hamburgerMenu,
-  .hamburgerDropdown {
-    display: none;
-  }
-
-  .navMenu ul {
-    display: flex;
-  }
-
-  .contactButton a:hover {
-    background-color: rgba(255, 255, 255, 0.25);
-    color: var(--color-white);
-  }
-}
-
 /* HEADER */
-
 header {
   background-image: url(assets/mobile/image-header.jpg);
   background-size: cover;
@@ -258,14 +235,6 @@ header {
   align-items: center;
   padding-top: 4rem;
 }
-
-@media (min-width: 640px) {
-  header {
-    background-image: url(assets/desktop/image-header.jpg);
-  }
-}
-
-/* MAIN */
 
 /* TRANSFORM AND STAND OUT */
 .learnMoreButton {
@@ -308,44 +277,6 @@ header {
 .standOutTextContainer p {
   padding: 1.5rem 0;
   color: var(--color-dark-grayish-blue);
-}
-
-@media (min-width: 640px) {
-  .transformYourBrandText,
-  .standOutText {
-    padding: 6rem 0.5rem;
-  }
-}
-
-@media (min-width: 768px) {
-  .mainContainer {
-    display: grid;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .transformYourBrandText,
-  .transformYourBrandImg,
-  .standOutText,
-  .standOutImg {
-    min-height: 37.5rem;
-  }
-
-  .transformYourBrandText,
-  .standOutText {
-    padding: 0 2rem;
-    display: flex;
-    text-align: left;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-  }
-
-  .transformYourBrandText {
-    order: -1;
-  }
-}
-
-@media (min-width: 768px) {
 }
 
 /* GRAPHIC DESIGN AND PHOTOGRAPHY */
@@ -404,7 +335,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   text-align: center;
   padding-bottom: 4rem;
 }
@@ -434,14 +365,12 @@ header {
 }
 
 /* GALLERY */
-
 .gallery {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 /* FOOTER */
-
 footer {
   background-color: var(--color-light-cyan);
   padding: 4rem 0;
@@ -469,4 +398,122 @@ footer {
 .footerLinks {
   display: flex;
   gap: 2rem;
+}
+
+/* ======= MEDIA QUERIES ======= */
+
+@media (min-width: 640px) {
+  /* GENERAL */
+  h1 {
+    font-size: 3rem;
+  }
+
+  /* HEADER */
+  header {
+    background-image: url(assets/desktop/image-header.jpg);
+  }
+
+  /* TRANSFORM AND STAND OUT */
+  .transformYourBrandText,
+  .standOutText {
+    padding: 6rem 0.5rem;
+  }
+}
+
+@media (min-width: 768px) {
+  /* NAV */
+  .hamburgerMenu,
+  .hamburgerDropdown {
+    display: none;
+  }
+
+  .navMenu ul {
+    display: flex;
+  }
+
+  .contactButton a:hover {
+    background-color: rgba(255, 255, 255, 0.25);
+    color: var(--color-white);
+  }
+
+  /* TRANSFORM AND STAND OUT */
+  .mainContainer {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .transformYourBrandText,
+  .transformYourBrandImg,
+  .standOutText,
+  .standOutImg {
+    min-height: 37.5rem;
+  }
+
+  .transformYourBrandText,
+  .standOutText {
+    padding: 0 2rem;
+    display: flex;
+    text-align: left;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .transformYourBrandText {
+    order: -1;
+  }
+
+  /* GRAPHIC DESIGN AND PHOTOGRAPHY */
+  .graphicDesignText,
+  .photographyText {
+    max-width: 22rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  /* GENERAL */
+  h4 {
+    font-size: 1.25rem;
+    padding-bottom: 6rem;
+  }
+
+  /* TESTIMONIALS */
+  .testimonials {
+    padding: 8rem 0;
+  }
+
+  .clientTestimonials {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 3fr));
+    gap: 2rem;
+  }
+
+  /* GALLERY */
+  .gallery {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    min-height: 24rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  /* GENERAL */
+  h2 {
+    font-size: 2.5rem;
+  }
+
+  /* TRANSFORM AND STAND OUT */
+  .transformYourBrandText,
+  .standOutText {
+    padding: 0;
+  }
+
+  .transformYourBrandTextContainer,
+  .standOutTextContainer {
+    width: 62.5%;
+  }
+
+  .transformYourBrandTextContainer p,
+  .standOutTextContainer p {
+    padding: 2rem 0;
+    color: var(--color-dark-grayish-blue);
+  }
 }
