--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,11 @@ body {
   min-width: 320px;
 }
 
+.wrapper {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
 .container {
   width: 90%;
   max-width: 1280px;
@@ -515,5 +520,10 @@ footer {
   .standOutTextContainer p {
     padding: 2rem 0;
     color: var(--color-dark-grayish-blue);
+  }
+
+  /* GALLERY */
+  .gallery {
+    min-height: 28rem;
   }
 }
