--- a/styles.css
+++ b/styles.css
@@ -425,7 +425,7 @@ footer {
 }
 
 .footerNav a,
-.footerLinks a {
+.footerLinks a svg path {
   transition: all 300ms ease;
 }
 
@@ -507,8 +507,8 @@ footer {
     color: var(--color-white);
   }
 
-  .footerLinks a:hover {
-    opacity: 0.75;
+  .footerLinks a:hover svg path {
+    fill: var(--color-white);
   }
 }
 
