--- a/styles.css
+++ b/styles.css
@@ -271,7 +271,8 @@ header {
   transition: all 300ms ease;
 }
 
-.learnMoreButton:hover::after {
+.learnMoreButton:hover::after,
+.learnMoreButton:focus::after {
   opacity: 1;
 }
 
@@ -460,11 +461,13 @@ footer {
     display: flex;
   }
 
-  .navMenu a:hover {
+  .navMenu a:hover,
+  .navMenu a:focus {
     opacity: 0.75;
   }
 
-  .contactButton a:hover {
+  .contactButton a:hover,
+  .contactButton a:focus {
     background-color: rgba(255, 255, 255, 0.25);
     color: var(--color-white);
     opacity: 1;
@@ -503,11 +506,13 @@ footer {
   }
 
   /* FOOTER */
-  .footerNav a:hover {
+  .footerNav a:hover,
+  .footerNav a:focus {
     color: var(--color-white);
   }
 
-  .footerLinks a:hover svg path {
+  .footerLinks a:hover svg path,
+  .footerLinks a:focus svg path {
     fill: var(--color-white);
   }
 }
