Adjusted headerContainer spacing. Added main textContainer widths at 1024px viewport width.

--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,7 @@ nav {
 
 .hamburgerDropdown {
   position: absolute;
+  z-index: 10;
   top: 4.75rem;
   right: 0;
   display: none;
@@ -243,7 +244,7 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 12.5vh;
+  gap: clamp(2.5rem, 12.5vh, 5rem);
   position: absolute;
   top: 25%;
   left: 50%;
@@ -439,7 +440,7 @@ footer {
 @media (min-width: 640px) {
   /* GENERAL */
   h1 {
-    font-size: 3rem;
+    font-size: 2.75rem;
   }
 
   /* HEADER */
@@ -528,6 +529,17 @@ footer {
     padding-bottom: 6rem;
   }
 
+  /* HEADER */
+  .headerContainer {
+    top: 22.5%;
+    gap: clamp(2.5rem, 12.5vh, 7.5rem);
+  }
+
+  .transformYourBrandTextContainer,
+  .standOutTextContainer {
+    width: 75%;
+  }
+
   /* TESTIMONIALS */
   .testimonials {
     padding: 8rem 0;
@@ -551,6 +563,10 @@ footer {
 
 @media (min-width: 1280px) {
   /* GENERAL */
+  h1 {
+    font-size: 3.5rem;
+  }
+
   h2 {
     font-size: 2.5rem;
   }
