--- a/styles.css
+++ b/styles.css
@@ -235,7 +235,10 @@ header {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  min-height: max(100vh, 33.75rem);
+  width: 100%;
+  height: 100vh;
+  min-height: 33.75rem;
+  max-height: 80rem;
   position: relative;
 }
 
